@@ -220,7 +220,7 @@ Pressing SPACE at any time will pause/unpause the simulation. While paused you m
 
 TAB cycles through selecting the current visible users.
 
-The camera mode, either tracking activity, or showing the entire code tree, can be toggled using the V key.
+The camera mode, either tracking activity, or showing the entire code tree, can be toggled using the V key. You can drag the mouse on the background to manually control the camera.
 
 Interactive keyboard commands:
 .sp
