@@ -1,9 +1,11 @@
 0.25:
  * Bazaar support (John Arbash Meinel).
- * Clicking the background moves the camera over where you clicked.
+ * Dragging the mouse on the background moves the camera.
+ * Mouse automatically hides after 3 seconds of inactivity.
  * Added --camera-mode option (track,overview).
  * Support DOS line endings in logs.
  * Improved compatibility of hg log command (Brendan Cully).
+ * Fixed PPM exporter producing blank images on some video cards.
  * Fixed parsing of negative timezones from cvs-exp.pl logs.
  * Fixed various gdb and compiler warnings.
 
